--- a/ue02_typescript/package.json
+++ b/ue02_typescript/package.json
@@ -11,9 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.16.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.2.0",
