--- a/rpi-server-ngx/server/package.json
+++ b/rpi-server-ngx/server/package.json
@@ -15,6 +15,7 @@
     "@types/debug": "0.0.31",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.0.0-alpha.6",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug-sx": "^0.2.4",
     "express": "^4.16.4",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
